--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -13,3 +13,10 @@
   font-weight: 700;
   src: url("../fonts/SpaceGrotesk-Bold.ttf") format("truetype");
 }
+
+/* ===== REUSABLE CSS CLASS ===== */
+@layer components {
+  .container {
+    @apply mx-auto w-[calc(100%-3rem)] max-w-screen-xl;
+  }
+}
